Tidy up and prepare for feature design

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap"
       />
+    <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Rubik:300,400,500&display=swap"
+      />
 
     <title>IDYEAHS</title>
   </head>
